syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "api/proto/seccy";

package seccy;

message SetRequest {
    string key = 1;
    string value = 2;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

service Seccy {
    rpc Set(SetRequest) returns (google.protobuf.Empty);
    rpc Get(GetRequest) returns (GetResponse);
}